# oi-speech

./: .gitignore  Dockerfile.arm64  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml  requirements-common.txt  requirements-omnilingual.txt  startup.sh
app/: config.py  main.py
app/asr_backends/: base.py  factory.py  faster_whisper_backend.py  omnilingual_backend.py
app/models/: audio.py
app/routers/: audio.py
app/services/: diar_infer_telephonic.yaml  diarization.py  helpers.py  transcription.py
